@@ -1,5 +1,7 @@
 *SVN*
 
+* Make sure bzr SCM works when revision is head (or unspecified) [michiels]
+
 * Support p4sync_flags and p4client_root variables for Perforce [gseidman]
 
 * Prepare for Net::SSH v2 by making sure Capistrano only tries to load Net::SSH versions less than 1.99.0 [Jamis Buck]
